Correct the mirror hostname (was getting configured as gb)

--- a/httpdir/preseed.cfg
+++ b/httpdir/preseed.cfg
@@ -89,8 +89,8 @@ d-i pkgsel/update-policy select none
 #choose-mirror-bin mirror/suite select maverick
 #d-i debian-installer/allow_unauthenticated string true
 
-d-i mirror/country string us
-d-i mirror/http/hostname string archive.ubuntu.com
+d-i mirror/country string manual
+d-i mirror/http/hostname string us.archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
 
